# tremor-assist

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app_launch.py  build_app.sh  pyproject.toml  requirements-dev.txt  run.sh  setup.py
.github/workflows/: ci.yml
TremorAssist.app/Contents/: Info.plist
TremorAssist.app/Contents/MacOS/: TremorAssist
TremorAssist.app/Contents/Resources/: AppIcon.icns
native/: bench.py  build.sh  tremor_core.c  tremor_core.h  tremor_engine.swift
tests/: test_adaptive.py  test_analysis.py  test_config.py  test_metrics.py  test_native_parity.py  test_one_euro.py  test_scroll.py
tools/: make_icon.py
tremor_assist/: __init__.py  __main__.py  adaptive.py  analysis.py  app.py  config.py  engine.py  metrics.py  native.py  one_euro.py  ui.py
